# peptimetric

./: .gitignore  LICENSE  Makefile  Procfile  README.md  classes.py  control-pep11.csv  control-pep12.csv  control-pep13.csv  control-pep15.csv  control-pep17.csv  control-pep18.csv  control-pep19.csv  control-pep20.csv  control-pep23.csv  control-pep24.csv  control-pep26.csv  control-pep29.csv  control-pep3.csv  control-pep5.csv  control-pep7.csv  environment.yml  human_proteome.csv  lists.py  methods.py  peptide.py  peptide_methods.py  playground.py  playground_s.py  protein.py  protein_lists.py  protein_methods.py  pyproject.toml  requirements.txt  test.py  texts_for_webapp.py  type-1-pep1.csv  type-1-pep10.csv  type-1-pep14.csv  type-1-pep16.csv  (+12 more)
UI_files/: UI_file.ui  main.py  ui_functions.py  ui_main.py
assets/: styles.css
designertest/: gemb.py  gtest.ui  mltest.ui
diabetes-files/: control.csv  type-1.csv
diabetes-files-separated/: control-pep12.csv  control-pep15.csv  control-pep17.csv  control-pep18.csv  control-pep19.csv  control-pep20.csv  control-pep23.csv  control-pep26.csv  control-pep3.csv  type-1-pep10.csv  type-1-pep22.csv  type-1-pep25.csv  type-1-pep30.csv  type-1-pep4.csv
example-files/: all-files.csv  control-pep11.csv  control-pep13.csv  control-pep24.csv  control-pep29.csv  control-pep5.csv  control-pep7.csv  type-1-pep1.csv  type-1-pep14.csv  type-1-pep16.csv  type-1-pep2.csv  type-1-pep21.csv  type-1-pep27.csv  type-1-pep28.csv  type-1-pep6.csv  type-1-pep8.csv  type-1-pep9.csv
example_files/: peptide_sample_13 2.xlsx  (+12 more)
pyqt_ui/: main.py  (+2 more)
(+25 files in other folders)
