[tool.poetry]
name = "pept-compare"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
pillow = "^8.1.2"
numpy = "^1.20.1"
scipy = "^1.6.1"
requests = "^2.25.1"
tqdm = "^4.59.0"
xlrd = "^2.0.1"
setuptools = "^54.1.1"
biopython = "^1.78"
kiwisolver = "^1.3.1"
dash = "^1.19.0"
dash-bootstrap-components = "^0.11.3"
pyteomics = "^4.4.1"
joblib = "^1.0.1"
prody = "^2.0"
openpyxl = "^3.0.6"
ipython = "^7.21.0"
ipywidgets = "^7.6.3"
rq = "^1.8.0"
redis = "^3.5.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
